# kdg-calculator

./: README.md  pyproject.toml
src/kdg_calculator/: calculator.py
