[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "kdg-calculator"
version = "0.0.2"
authors = [
  { name="KrishnenduDG", email="krishnendu.kdg@gmail.com" },
]
description = "A simple calculator package that provides basic arithmetic operations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/krishnendudg/kdg-calculator"
Issues = "https://github.com/krishnendudg/kdg-calculator/issues"